Fixed bug with tags box covering date/time picker

--- a/css/app.css
+++ b/css/app.css
@@ -107,6 +107,7 @@ header nav li.menu-text:hover a {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1000;
 }
 
 .m-calendar .toolbar {
